2010-02-11	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/pfcmd/pfcmd.pm: Allow ! in value field when quoted. Fixes
	#911;
	http://www.packetfence.org/mantis/view.php?id=911

2010-02-10	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/conf/templates/httpd.conf.apache22,
	pf/conf/templates/httpd.conf.pre_apache22: Fixed an apache rewrite rule

	* pf/lib/pf/vlan.pm: Added validation to custom_getCorrectVlan.
	If the switch object is not correct, return the default VLAN and log a 
	warning.

2010-02-09	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/addons/recovery.pl, pf/bin/pfcmd, pf/lib/pf/vlan.pm, 
	pf/sbin/pfsetvlan, pf/UPGRADE: Avoid loading the entire SwitchFactory 
	at several spots in vlan.pm by passing the switch object around instead 
	of the switch's IP. Improves performance. Fixes #910;
	http://www.packetfence.org/mantis/view.php?id=910

	* pf/lib/pf/SNMP.pm, pf/sbin/pfsetvlan: When a 'UP' trap is received
	PacketFence will try to get the MAC address 30 times or for 2 minutes 
	whichever condition is first met. Fixes #903;
	http://www.packetfence.org/mantis/view.php?id=903
	
	This prevent the following condition: telnet timeouts take three 
	minutes for the thread to recover so 30 times 3 minutes would hang a 
	thread (and the switch) for 90 minutes. Now since it's longer than the 2
	minutes limit, it only hang it for 3 minutes.

	* pf/lib/pf/web.pm: In web_node_record_user_agent call node_modify() 
	directly instead of pfcmd node edit. It's more performant (avoids 
	spawning a shell) and it'll avoid trying to adjust vlan. Fixes #908;
	http://www.packetfence.org/mantis/view.php?id=908

	* pf/sbin/pfsetvlan: Created an ALRM signal handler that report an
	error and does nothing else. This is a workaround to prevent pfsetvlan
	to crash when a Net::Telnet or a Net::Appliance::Session call times out,
	sending a SIGALRM. Fixes #907;
	http://www.packetfence.org/mantis/view.php?id=907 

	Upstream bug: https://rt.cpan.org/Public/Bug/Display.html?id=54415
