@@ -38,6 +38,8 @@ Bug fixes
 - Performance fixes (#908, #910)
 - Captive portal stability fixes (#892)
 - Mitigated Net::Telnet problems with perl threads (#903, #907)
+- Fixed rare port-security problems with stacked switches or switches with 
+  large ifIndex (#921)
 - Misc. stability fixes
 
 --------------------------------------------------------------------------------
